# crypto_address

./: Makefile.toml  README.md
.github/workflows/: check.yml  draft_release.yml  manual_deploy.yml  mk_release_branch.yml  tag_version.yml
crates/address/: Cargo.toml
crates/address/src/: common.rs  error.rs  h160.rs  lib.rs
crates/evm_address/: Cargo.toml
crates/evm_address/src/: address.rs
crates/extend_key/: Cargo.toml
crates/extend_key/src/: base58.rs  ecdsa_key.rs  error.rs  extkey.rs  fixed_bytes.rs  lib.rs  local_macro.rs
crates/extend_key/tests/: bip32_vector1.rs  bip32_vector2.rs  bip32_vector3.rs  bip32_vector4.rs  bip32_vector5.rs
crates/extend_key/tests/common/: mod.rs
crates/hdpath/: Cargo.toml
crates/hdpath/src/: ecdsa_key.rs  extkey.rs  lib.rs  node.rs  path.rs
crates/mnemonic/: Cargo.toml
crates/mnemonic/src/: calcseed.rs  lib.rs  words.rs
crates/viewer/: Cargo.toml
crates/viewer/examples/: drive_key.rs  gen_mnemonic.rs
crates/viewer/src/: main.rs  setup.rs  words.rs
docs/: wasm.js
