[package]
name = "mnemonic"
version = "0.1.0"
edition = "2021"

[dependencies]
derive-new = "~0.5"
tinyvec = "~1.5"
derive_more = "~0.99"
getset = "~0.1"
rand = "~0.8"
rust-embed = "~6.3"
once_cell = "~1.9"
bytes = "~1.1"
num-traits = "~0.2"
num-bigint = "~0.4"
sha2 = "~0.10"
hmac = "~0.12"
pbkdf2 = { version = "~0.10", default-features = false }
unicode-normalization = "~0.1"
